--- a/frontend/src/screens/LandingPage/LandingPage.css
+++ b/frontend/src/screens/LandingPage/LandingPage.css
@@ -7,8 +7,8 @@
   background-size: cover;
 }
 .title {
-  font-size: 100px;
-  color: white;
+  font-size: 99px;
+  color: gray;
 }
 .subtitle {
   font-size: 25px;
@@ -25,6 +25,7 @@
 }
 .landingbutton {
   width: 200px;
+  margin-right: 50px;
   height: 55px;
 }
 
